export default {
  // Common
  cancel: 'Cancel',
  ok: 'OK',
  close: 'Close',
  save: 'Save',
  delete: 'Delete',
  edit: 'Edit',
  add: 'Add',
  remove: 'Remove',
  undo: 'Undo',
  gotIt: 'Got it',

  // Tab Navigator
  today: 'Today',
  requests: 'Requests',
  students: 'Students',
  settings: 'Settings',

  // TodayScreen
  jumpToToday: 'Jump to Today',
...
